k8s/syncthing/resources/web-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-deployment
  annotations:
    reloader.stakater.com/auto: 'true'
  labels: &labels
    app.kubernetes.io/component: web
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels: *labels
  template:
    metadata:
      labels: *labels
    spec:
      securityContext:
        fsGroup: 1000
      hostname: syncthing
      volumes:
        - name: volume
          persistentVolumeClaim:
            claimName: volume
        - name: nfs-media
          persistentVolumeClaim:
            claimName: nfs-media
      containers:
        - name: syncthing
          image: docker.io/syncthing/syncthing:1.30.0@sha256:74eeedb08d4912763055594f8bd98bfc039f3bc504b6cd2c2adc8294111c1251
          command: [/bin/syncthing]
          resources:
            requests:
              memory: 100M
            limits:
              memory: 1G
          securityContext:
            privileged: false
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 1000
            runAsGroup: 1000
            readOnlyRootFilesystem: true
            capabilities:
              drop: [ALL]
          volumeMounts:
            - name: volume
              mountPath: /config
            - name: nfs-media
              mountPath: /var/syncthing
          ports:
            - name: http
              containerPort: 8384
            - name: listen-tcp
              containerPort: 22000
            - name: listen-udp
              containerPort: 22000
              protocol: UDP
            - name: discovery
              containerPort: 22027
              protocol: UDP
