k8s/syncthing/resources/lan-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: lan-service
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 8384
      targetPort: http
    - name: listen-tcp
      port: 22000
      targetPort: listen-tcp
    - name: listen-udp
      port: 22000
      protocol: UDP
      targetPort: listen-udp
    - name: discovery
      port: 22027
      protocol: UDP
      targetPort: discovery
